--- a/app/body/body.component.html
+++ b/app/body/body.component.html
@@ -1,1 +1,9 @@
-<p>body works!</p>
+<div class="body-container">
+    <div class="box1">
+        <h1>Hola {{salute()}}!</h1>
+        <h4></h4>
+    </div>
+    <div class="box2">
+        <img [src]="image" alt="">
+    </div>
+</div>
