--- a/app/footer/footer.component.html
+++ b/app/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+
+<div class="footer-container">
+    <div class="logo">
+        <img [src]="image" alt="">
+    </div>
+    <p>Todos los derechos reservados :D</p>
+</div>
