--- a/app/header/header.component.html
+++ b/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header-container">
     <nav class="navbar navbar-light">
         <a class="navbar-brand" href="">
             <img class="logo" [src]="image" alt="">
