--- a/app/header/header.component.html
+++ b/app/header/header.component.html
@@ -6,13 +6,13 @@
         <div class="conateiner-nav">
             <ul>
                 <li>
-                    <a href="">Home</a>
+                    <a [routerLink]="['/home']">Home</a>
                 </li>
                 <li>
-                    <a href="">Proyectos</a>
+                    <a [routerLink]="['/proyectos']">Proyectos</a>
                 </li>
                 <li>
-                    <a href="">About me</a>
+                    <a [routerLink]="['/about']">About me</a>
                 </li>
             </ul>
         </div>
