--- a/app/footer/footer.component.html
+++ b/app/footer/footer.component.html
@@ -3,5 +3,16 @@
     <div class="logo">
         <img [src]="image" alt="">
     </div>
-    <p>Todos los derechos reservados :D</p>
+    <p>Todos los derechos reservados </p>
+    <ul>
+        <li>
+            
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+    </ul>
 </div>
