--- a/app/components/proyectos/proyectos.component.html
+++ b/app/components/proyectos/proyectos.component.html
@@ -1,3 +1,13 @@
-<div class="body-container">
-    <h1>Aca deben ir los proyectos!</h1>
+<div class="projects">
+    <div class="container">
+        <h3 class="title">Experiencia</h3>
+        <div class="project-container">
+            <div class="project">
+                <div class="image">
+                    <img [src]="image" alt="">
+                </div>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium excepturi pariatur nesciunt aliquam consectetur nisi sunt delectus vel quas ducimus odit, natus officiis dicta quos totam dolor quibusdam rerum fuga.  </p>
+            </div>
+        </div>
+    </div>
 </div>
