--- a/app/components/about/about.component.html
+++ b/app/components/about/about.component.html
@@ -1,3 +1,64 @@
 <div class="body-container">
-    <h1>Mi info</h1>
+    <h1 class="title">Info</h1>
+    
+    <div class="row gutters-sm">
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <div class="d-flex flex-column align-items-center text-center">
+                <img [src]="imageProfile" alt="Admin" class="rounded-circle" width="150">
+                <div class="mt-3">
+                  <p class="text-secondary mb-1">Jr. Developer</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mt-3">
+          </div>
+        </div>
+        <div class="col-md-8">
+          <div class="card mb-3">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-sm-3">
+                  <h6 class="mb-0">Nombre Completo</h6>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                 German Ponce
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <h6 class="mb-0">Email</h6>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                  germanponce268@gmail.com
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <h6 class="mb-0">Edad</h6>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                  37 
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <h6 class="mb-0">Stack</h6>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                  Java, SQL, Angular, Git
+                </div>
+              </div>
+              <hr>
+            </div>
+          </div>
+        </div>
+        </div>
+      
 </div>
+ 
