--- a/app/components/home/home.component.css
+++ b/app/components/home/home.component.css
@@ -1,6 +1,6 @@
 .body-container{
     width: 100%;
-    height:750px;
+    height:550px;
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center center;
@@ -11,7 +11,7 @@
 }
 
 .box1{
-    margin-left: 5%;
+    margin-left: 25%;
     margin-top: 5%;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0);
 }
@@ -23,4 +23,6 @@
 img{
     border-radius: 50%;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0);
+    width: 300px;
+    height: 300px;
 }
