--- a/app/components/proyectos/proyectos.component.css
+++ b/app/components/proyectos/proyectos.component.css
@@ -1,6 +1,6 @@
-.body-container{
+.projects{
     width: 100%;
-    height:750px;
+    height:550px;
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center center;
@@ -10,6 +10,22 @@
     color: aliceblue; 
 }
 
-h1{
-    margin-left: 25%;
+.projects .container .project-container{
+    margin-top: 5%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
 }
+
+.title{
+    margin-left: 35%;
+    
+}
+
+.image{
+    float: left;
+    margin-right: 5%;
+}
+
+
