--- a/app/footer/footer.component.css
+++ b/app/footer/footer.component.css
@@ -15,6 +15,19 @@
 }
 p{
     margin-left: 30%;
+    margin-top: 2%;
+}
+ul{
+    margin-left: 5%;
+    margin-top: 2%;
 }
 
+li{
+    margin-top: 5%; 
+    padding-left: 25px;
+    display: inline;
+}
 
+a{
+    text-decoration: none;
+}
