--- a/app/footer/footer.component.html
+++ b/app/footer/footer.component.html
@@ -6,13 +6,14 @@
     <p>Todos los derechos reservados </p>
     <ul>
         <li>
+            <a href=""><i class="fa-solid fa-envelope fa-2xl"></i></a>
             
         </li>
         <li>
-
+           <a href=""><i class="fa-brands fa-github fa-2xl"></i></a>
         </li>
         <li>
-
+            <a href=""><i class="fa-brands fa-linkedin fa-2xl"></i></a>
         </li>
     </ul>
 </div>
