--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,5 +3,17 @@
     <div class="logo">
         <img [src]="image" alt="">
     </div>
-    <p>Todos los derechos reservados :D</p>
+    <p>Todos los derechos reservados </p>
+    <ul>
+        <li>
+            <a [routerLink]="['/contact']"><i class="fa-solid fa-envelope fa-2xl"></i></a>
+            
+        </li>
+        <li>
+           <a href="https://github.com/germanponce268/portfolio"><i class="fa-brands fa-github fa-2xl"></i></a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/german-ponce-a2897217b/"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+        </li>
+    </ul>
 </div>
